services/demand-forecast-serving/k8s/overlays/batch-only/delete/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "demand-forecast-serving-service"
$patch: delete
